{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 5,
  "lineage": "e4612812-6314-5807-f59b-69c2145ba23a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_alb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:076892551558:loadbalancer/app/node-backend-lb/11f38284a35e531e",
            "arn_suffix": "app/node-backend-lb/11f38284a35e531e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-backend-lb-1800519117.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:076892551558:loadbalancer/app/node-backend-lb/11f38284a35e531e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-015ea5ab3d00cf289"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01aa8a391820f64e4"
              },
              {
                "subnet_id": "subnet-0272be281779b323b"
              }
            ],
            "subnets": [
              "subnet-01aa8a391820f64e4",
              "subnet-0272be281779b323b"
            ],
            "vpc_id": "vpc-06c832ee7f5a654ed",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_alb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:076892551558:loadbalancer/app/node-frontend-lb/a5f638b30d7aa674",
            "arn_suffix": "app/node-frontend-lb/a5f638b30d7aa674",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-frontend-lb-1409983601.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:076892551558:loadbalancer/app/node-frontend-lb/a5f638b30d7aa674",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-010aa870bbd7da26c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01aa8a391820f64e4"
              },
              {
                "subnet_id": "subnet-0272be281779b323b"
              }
            ],
            "subnets": [
              "subnet-01aa8a391820f64e4",
              "subnet-0272be281779b323b"
            ],
            "vpc_id": "vpc-06c832ee7f5a654ed",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_alb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:076892551558:targetgroup/node-backend-targets-group/aff2b4b58b23a730",
            "arn_suffix": "targetgroup/node-backend-targets-group/aff2b4b58b23a730",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:076892551558:targetgroup/node-backend-targets-group/aff2b4b58b23a730",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:076892551558:loadbalancer/app/node-backend-lb/11f38284a35e531e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "node-backend-targets-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06c832ee7f5a654ed"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_alb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:076892551558:targetgroup/node-frontend-targets-group/143f45e64b86ebe7",
            "arn_suffix": "targetgroup/node-frontend-targets-group/143f45e64b86ebe7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:076892551558:targetgroup/node-frontend-targets-group/143f45e64b86ebe7",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:076892551558:loadbalancer/app/node-frontend-lb/a5f638b30d7aa674"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "node-frontend-targets-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06c832ee7f5a654ed"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076892551558:security-group/sg-015ea5ab3d00cf289",
            "description": "Security group for node-backend ecs",
            "filter": null,
            "id": "sg-015ea5ab3d00cf289",
            "name": "node-backend-sg",
            "tags": {
              "Name": "node-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c832ee7f5a654ed"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076892551558:security-group/sg-010aa870bbd7da26c",
            "description": "Security group for node-frontend ecs",
            "filter": null,
            "id": "sg-010aa870bbd7da26c",
            "name": "node-frontend-sg",
            "tags": {
              "Name": "node-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c832ee7f5a654ed"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076892551558:subnet/subnet-01aa8a391820f64e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "10.10.32.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Challenge-node-app-public-us-east-2a"
                ]
              }
            ],
            "id": "subnet-01aa8a391820f64e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076892551558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Challenge-node-app-public-us-east-2a",
              "Project": "Challenge-node-app",
              "Tier": "Public"
            },
            "vpc_id": "vpc-06c832ee7f5a654ed"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076892551558:subnet/subnet-0272be281779b323b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "10.10.80.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Challenge-node-app-public-us-east-2b"
                ]
              }
            ],
            "id": "subnet-0272be281779b323b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076892551558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Challenge-node-app-public-us-east-2b",
              "Project": "Challenge-node-app",
              "Tier": "Public"
            },
            "vpc_id": "vpc-06c832ee7f5a654ed"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:076892551558:vpc/vpc-06c832ee7f5a654ed",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bd7aac57a4559d06",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-16094a7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Project",
                "values": [
                  "Challenge-node-app"
                ]
              }
            ],
            "id": "vpc-06c832ee7f5a654ed",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02d5f630e1bf14221",
            "owner_id": "076892551558",
            "tags": {
              "Name": "Challenge-node-app",
              "Project": "Challenge-node-app"
            }
          }
        }
      ]
    }
  ]
}